--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           node-version: 12
           registry-url: https://npm.pkg.github.com/
-          scope: '@harshdedhia12'
+          scope: 'harshdedhia12'
       - run: npm install
       - run: npm publish
         env:
