--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "msgpack-decorators": "github:camnewnham/msgpack-decorators"
+    "msgpack-decorators": "github:camnewnham/msgpack-decorators",
+    "nanoid": "^5.0.7"
   }
 }
