--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@harshdedhia12/sf-utils",
-  "version": "1.0.4",
+  "version": "1.0.5",
+  "type": "module",
   "description": "Package for trying out GITHUB Package Registry",
   "main": "index.js",
   "publishConfig": {
